// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CockpitCard > renders 1`] = `
<section
  class="cockpit-card-variable-height cockpit-card"
  data-v-1451ba78=""
  data-v-d91b9f54=""
  narrow="false"
>
  <div
    class="header"
    data-v-d91b9f54=""
  >
    
    
    <h2>
      Header
    </h2>
    
    
  </div>
  <hr
    class="hr"
    data-v-d91b9f54=""
  />
  
  
  <div>
    Content
  </div>
  
  
</section>
`;

exports[`CockpitCard > renders narrow 1`] = `
<section
  class="cockpit-card-variable-height cockpit-card"
  data-v-1451ba78=""
  data-v-d91b9f54=""
  narrow="true"
>
  <div
    class="header"
    data-v-d91b9f54=""
  >
    
    
    <h2>
      Header
    </h2>
    
    
  </div>
  <hr
    class="hr"
    data-v-d91b9f54=""
  />
  
  
  <div>
    Content
  </div>
  
  
</section>
`;

exports[`CockpitCard > renders with empty header slot 1`] = `
<section
  class="cockpit-card-variable-height cockpit-card"
  data-v-1451ba78=""
  data-v-d91b9f54=""
  narrow="false"
>
  <div
    class="header"
    data-v-d91b9f54=""
  >
    
    
    <h2>
      Header
    </h2>
    
    
  </div>
  <hr
    class="hr"
    data-v-d91b9f54=""
  />
  
  
  <div>
    Content
  </div>
  
  
</section>
`;
